--- a/RESTFul Services Demo/war/WEB-INF/lib/.gitignore
+++ b/RESTFul Services Demo/war/WEB-INF/lib/.gitignore
@@ -11,3 +11,10 @@
 /jdo-api-3.0.1.jar
 /jsr107cache-1.1.jar
 /jta-1.1.jar
+/appengine-api-1.0-sdk-1.7.5.jar
+/appengine-jsr107cache-1.7.5.jar
+/datanucleus-api-jdo-3.1.3.jar
+/datanucleus-api-jpa-3.1.3.jar
+/datanucleus-appengine-2.1.2.jar
+/datanucleus-core-3.1.3.jar
+/gson-2.2.2.jar
