--- a/RESTFul Services Demo/war/WEB-INF/web.xml
+++ b/RESTFul Services Demo/war/WEB-INF/web.xml
@@ -19,6 +19,9 @@
   <servlet-name>SystemServiceServlet</servlet-name>
   <url-pattern>/_ah/spi/*</url-pattern>
  </servlet-mapping>
+   <welcome-file-list>
+    <welcome-file>app/persons-remote.html</welcome-file>
+  </welcome-file-list> 
 <security-constraint>
    <web-resource-collection>
       <web-resource-name>App</web-resource-name>
@@ -41,4 +44,5 @@
    <user-data-constraint>
       <transport-guarantee>NONE</transport-guarantee>
    </user-data-constraint>
-</security-constraint></web-app>
+</security-constraint>
+</web-app>
